# claude-as-coach

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  DEMO-SCRIPT.md  PROJECT-SETUP.md  QUICKSTART-MANUAL.md  QUICKSTART.md  README.md  UPGRADE_SKILLS.md  pyproject.toml
.github/workflows/: static.yml
docs/: DECISION-PERSONAL-REPO-PATTERN.md  DOC-WORKFLOWS.md  DOC_HOUSEKEEPING_STATE.md  FEATURES.md  FEATURE_HOUSEKEEPING.md  NEXT-SESSION.md  NEXT_SESSION.md  SKILL-FORMAT-TESTING.md  WORKFLOW-GUIDE.md
docs/design/: MONTHLY-ROLLUP-DESIGN.md
docs/examples/: parent-workspace-CLAUDE.md
docs/features/: FEATURE-alice-crossfit-recovery.md  FEATURE-day-seam-flexibility.md  FEATURE-demo-teleprompter.md  FEATURE-deployment-workflow.md  FEATURE-git-history-squash.md  FEATURE-maya-mandarin-learner.md  FEATURE-mcp-skill-manager.md  FEATURE-monthly-rollup.md  FEATURE-onboarding-ux-audit.md  FEATURE-parent-workspace-public-repo.md  FEATURE-presentation-prep.md  FEATURE-production-development-workflow.md  FEATURE-project-description-template.md  FEATURE-rob-runner-demo.md  FEATURE-sally-software-engineer-demo.md  FEATURE-sister-directories-pattern.md  FEATURE-skill-vendor-compliance.md  FEATURE-skill-workflow-git-ops.md  FEATURE-vendor-submodule.md  FEATURE-workflow-cleanup.md
docs/instructions/: DOC_HOUSEKEEPING.md  FEATURE_HOUSEKEEPING.md  SESSION-PLANNING.md
docs/presentation/: README.md  (+4 more)
examples/: README.md
scripts/: __init__.py  demo_teleprompter.py  pack_skill.py  regenerate_demo_dates.py  requirements.txt  skill_workflow.py  test_both_formats.py  unpack_skill.py
(+80 files in other folders)
