[project]
name = "claude-as-coach"
version = "0.1.0"
description = "Claude-as-Coach skill management tools"
requires-python = ">=3.8"

[project.optional-dependencies]
demo = ["pyperclip>=1.8"]
vendor = ["pyyaml>=6.0"]

[project.scripts]
skill-pack = "scripts.pack_skill:main"
skill-unpack = "scripts.unpack_skill:main"
skill-workflow = "scripts.skill_workflow:main"
demo-teleprompter = "scripts.demo_teleprompter:main"
regenerate-demo-dates = "scripts.regenerate_demo_dates:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
